# upwins-veg-classifier

./: .env.example  .gitignore  CITATION.cff  LICENSE  README.md  config.yaml  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
data/: README.md
data/sample/: README.md
docs/: recording_runbook.md
hsiViewer/: __init__.py  hsi_viewer_ROI.py
models/example_model_v1/: README.md  model_card.md
notebooks/: 01_train_multitask_cnn.ipynb  02_batch_predict_image.ipynb  03_display_classification.ipynb
src/upwins_veg/: __init__.py  batch_predict.py  roi_labels.py  spectral_collection.py
